2016-03-01 Added ignoring inline styles
2016-03-01 Added positioning of values on x and y axis in Plot module
2016-02-24 Fixed displaying ranges after reset in Animated Page Progress module
2016-02-22 Added possibility to define smaller steps in Line Number module
2016-02-17 Added setting first page as cover in Navigation Bar module
2016-02-15 Added reading values only from canvas in LearnPen Report module
2016-02-10 Changed page name in dictionary
2016-02-10 Fixed displaying alert in Advanced Connector module
2016-02-10 Added isAllOK method and event in Text Identification module
2016-02-10 Fixed Check mode and Show Answers mode in Text and Writing Calculations modules
2016-02-04 Fixed getting error count in Hangman module
2016-02-03 Fixed setting state in Basic Math Gaps module
2016-02-03 Fixed issue with printing graphical backgrounds in Print Report module
2016-02-02 Added adding class during video playback in Video module
2016-02-01 Fixed issue with setting state in Multiple Audio Binder module
2016-01-27 Fixed issue with adding video source to addon model
2016-01-27 Fixed issue with removing module in group
2016-01-25 Added global state in Show Answers module
2016-01-20 Fixed adding class when page score is 100% in Navigation Bar module
2016-01-19 Fixed issue with Keep Original Order mode and dropdowngaps in Text module
2016-01-19 Fixed issue with Source List and Text gaps in Text module
2016-01-18 Fixed issue with double ShowAnswers execution in Multiplegap module
2016-01-18 Added new module Print Report
2016-01-18 Fixed test in LearnPen Report module
2016-01-15 Changed default values of correct range in LearnPen Report module
2016-01-15 Fixed changing module ID
2016-01-14 Fixed issue with show answers and check mode in Text module
2016-01-13 Fixed issue with dragging when check mode is on in Ordering module
2016-01-12 Fixed issue with dragged elements and them scores in MultipleGap module
2016-01-12 Added Blocked Lines property in Point And Lines module