@@ -135,4 +135,10 @@ public class TextViewMockup implements IDisplay {
 		// TODO Auto-generated method stub
 		
 	}
+
+	@Override
+	public void connectDOMNodeRemovedEvent(String id) {
+		// TODO Auto-generated method stub
+		
+	}
 }
